[package]
name = "cstfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
memmap2 = "0.9.4"
rusqlite = { version = "0.30.0", features = ["bundled"] }
seahash = "4.1.0"
